--- a/styles/prosilver/template/event/posting_editor_options_prepend.html
+++ b/styles/prosilver/template/event/posting_editor_options_prepend.html
@@ -1,3 +1,3 @@
-<!-- IF S_EDIT_POST and S_NEW_MESSAGE and U_ACP -->
+<!-- IF S_SMART_SUBJECTS and S_EDIT_POST and S_NEW_MESSAGE and U_ACP -->
 	<div><label for="overwrite_subjects"><input type="checkbox" name="overwrite_subjects" id="overwrite_subjects" /> {L_OVERWRITE_SUBJECTS}</label></div>
 <!-- ENDIF -->
