--- a/styles/prosilver/template/event/posting_editor_options_prepend.html
+++ b/styles/prosilver/template/event/posting_editor_options_prepend.html
@@ -1,4 +1,4 @@
-{% if S_SMART_SUBJECTS and S_EDIT_POST and S_NEW_MESSAGE and U_ACP %}
+{% if S_SMART_SUBJECTS_MOD and S_EDIT_POST and S_NEW_MESSAGE %}
 	<div>
 		<label for="overwrite_subjects">
 			<input type="checkbox" name="overwrite_subjects" id="overwrite_subjects" /> {{ lang('OVERWRITE_SUBJECTS') }}
