--- a/styles/prosilver/template/event/posting_editor_options_prepend.html
+++ b/styles/prosilver/template/event/posting_editor_options_prepend.html
@@ -1,7 +1,7 @@
 {% if S_SMART_SUBJECTS_MOD and S_EDIT_POST and S_NEW_MESSAGE %}
 	<div>
 		<label for="overwrite_subjects">
-			<input type="checkbox" name="overwrite_subjects" id="overwrite_subjects" /> {{ lang('OVERWRITE_SUBJECTS') }}
+			<input type="checkbox" name="overwrite_subjects" id="overwrite_subjects"> {{ lang('OVERWRITE_SUBJECTS') }}
 		</label>
 	</div>
 {% endif %}
